# facticli

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  live-smoke.yml
data/averitec/: dev_20.json  submission_dev2.json  submission_dev20.json  submission_dev20.tmp.json
notebooks/: 00_hello_world.ipynb  01_planner_subroutine_demo.ipynb  02_research_subroutine_demo.ipynb  03_judge_subroutine_demo.ipynb  04_full_checker_demo.ipynb  05_claim_extraction_demo.ipynb  06_averitec_submission_workflow.ipynb  csa.ipynb
scripts/: run_averitec_submission.py  test_routine.sh
src/facticli/: __init__.py  agents.py  averitec_submission.py  brave_search.py  claim_extraction.py  cli.py  cli_validators.py  config.py  gemini_inference.py  orchestrator.py  render.py  skills.py  types.py
src/facticli/adapters/: __init__.py  gemini_provider.py  openai_provider.py  provider_profile.py  retrievers.py
src/facticli/application/: __init__.py  config.py  factory.py  interfaces.py  progress.py  repository.py  services.py  stages.py
src/facticli/core/: __init__.py  artifacts.py  constraints.py  contracts.py  errors.py  normalize.py  usage.py
src/facticli/eval/: ev2r_prompts.py
src/facticli/prompts/: __init__.py  extract_claims.md  judge.md  plan.md  research.md  research_gemini.md  review.md
src/facticli/web/: __init__.py  __main__.py  app.py
src/facticli/web/static/: app.js  index.html  styles.css
tests/: helpers.py  test_application_services.py  test_application_stages.py  test_averitec_submission.py  test_claim_extraction.py  test_cli.py  test_factory.py  test_live_smoke.py  test_orchestrator.py  test_provider_profile.py  test_skills.py  test_web_app.py
